--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,12 @@
 # syntax=docker/dockerfile:1
 ARG PYTHON_VERSION=3.12.3
-FROM python:${PYTHON_VERSION}-slim as base
+FROM python:${PYTHON_VERSION}-slim AS base
 
-# Prevents Python from writing pyc files.
 ENV PYTHONDONTWRITEBYTECODE=1
-
-# Keeps Python from buffering stdout and stderr to avoid situations where
-# the application crashes without emitting any logs due to buffering.
 ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# Create a non-privileged user that the app will run under.
-# See https://docs.docker.com/go/dockerfile-user-best-practices/
 ARG UID=10001
 RUN adduser \
     --disabled-password \
@@ -23,22 +17,15 @@ RUN adduser \
     --uid "${UID}" \
     appuser
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.cache/pip to speed up subsequent builds.
-# Leverage a bind mount to requirements.txt to avoid having to copy them into
-# into this layer.
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=bind,source=backend/requirements.txt,target=requirements.txt \
-    python -m pip install -r requirements.txt
+COPY requirements.txt /app/requirements.txt
 
-# Switch to the non-privileged user to run the application.
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --no-cache-dir -r /app/requirements.txt
+
 USER appuser
 
-# Copy the source code into the container.
-COPY . .
+COPY . /app
 
-# Expose the port that the application listens on.
 EXPOSE 8000
 
-# Run the application.
-CMD uvicorn app:app --host 0.0.0.0 --port 8000
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
